welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: ';' expected but 'return' found.
	 if (nums(i)>n) {n=nums(i) return i
                                   ^